# project_CICD

./: .gitignore  CMakeLists.txt  README.md  test_version.cpp
.github/workflows/: release.yml
